# smvp

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  NEXTRELEASE.md  README.md  cliff.toml  justfile  pyproject.toml
.github/workflows/: runtime.yml
changelogs/: v0.1.x.md  v0.2.x.md  v0.3.x.md
scripts/: archive_changelog.py  dependency_upgrade_commit.py  extract_release_notes.sh  release_tags.sh  upgrade_dependencies.sh
src/smvp/: __init__.py  __main__.py  app.py  engine.py  utilities.py
tests/: test_app.py  test_archive_changelog.py  test_dependency_upgrade_commit.py  test_extract_release_notes.py  test_release_tags.py  test_utilities.py
