[project]
name = "smvp"
version = "0.4.1"
description = "Send a formatted email from the command line"
authors = [{ name = "Peter Nardi", email = "geozeke@gmail.com" }]
license = "MIT"
license-files = ["LICEN[CS]E*"]
readme = { file = "README.md", content-type = "text/markdown" }
keywords = [
    "ansi",
    "cron",
    "html",
    "logs",
    "mail",
    "mime",
    "python",
    "scripting",
    "send",
    "sendmail",
    "smvp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Topic :: Utilities",
    "Topic :: System :: Logging",
    "Topic :: Text Processing :: Markup :: HTML",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

requires-python = ">=3.10"
dependencies = [
    "ansi2html>=1.9.2",
    "bs4>=0.0.2",
    "lxml>=5.3.0",
    "tomli>=1.1.0 ; python_full_version < '3.11'",
]

[project.urls]
"Source Code" = "https://github.com/geozeke/smvp"
"Bug Tracker" = "https://github.com/geozeke/smvp/issues"

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.2.1",
    "ruff>=0.8.6",
    "types-beautifulsoup4>=4.12.0.20241020",
]
[project.scripts]
smvp = "smvp:main"

[tool.uv.sources]
smvp = { workspace = true }

[build-system]
requires = ["uv-build>=0.10,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
exclude = [".gitignore", "uv.lock"]

[tool.ruff.lint.isort]
force-single-line = true
